--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 21 10:44:04 CET 2022
-sdk.dir=C\:\\Users\\paula\\AppData\\Local\\Android\\Sdk
+#Tue Feb 22 17:12:03 CET 2022
+sdk.dir=C\:\\Sdk
