--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Feb 22 17:12:03 CET 2022
-sdk.dir=C\:\\Sdk
+sdk.dir=C\:\\Users\\paula\\AppData\\Local\\Android\\Sdk
