--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 01 17:48:39 CET 2022
-sdk.dir=C\:\\Users\\paula\\AppData\\Local\\Android\\Sdk
+#Thu Mar 03 13:41:44 CET 2022
+sdk.dir=C\:\\Users\\34605\\AppData\\Local\\Android\\Sdk
