--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Mar 03 13:41:44 CET 2022
-sdk.dir=C\:\\Users\\34605\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Sdk
